# internal/infrastructure/repository/user_repository.go
@@ -64,6 +64,50 @@ func (r *userRepositoryImpl) GetUserByID(ctx context.Context, id string) (*user.
 	return ud, nil
 }
 
+func (r *userRepositoryImpl) GetUserByKratosID(ctx context.Context, kratosID string) (*user.User, error) {
+	// UUIDに変換
+	kratosUUID, err := uuid.Parse(kratosID)
+	if err != nil {
+		return nil, fmt.Errorf("invalid kratos id: %w", err)
+	}
+
+	u, err := r.queries.GetUserByKratosID(ctx, kratosUUID)
+	if err != nil {
+		if errors.Is(err, pgx.ErrNoRows) {
+			return nil, fmt.Errorf("user not found")
+		}
+		return nil, err
+	}
+
+	// ドメインモデルのUserに変換して返す
+	var geom *user.Geometry
+	if u.Geom != nil {
+		geom = &user.Geometry{Geometry: u.Geom.Geometry}
+	}
+
+	ud, err := user.ReconstructUser(
+		user.UserID(u.ID.String()),
+		u.KratosID.String(),
+		u.Name,
+		u.HighlightedPhotoID,
+		u.Locale,
+		u.Description,
+		u.Locality,
+		u.AdministrativeArea,
+		u.CountryCode,
+		u.PostalCode,
+		geom,
+		u.FirstName,
+		u.LastName,
+		u.Email,
+		u.HasSetLocation,
+	)
+	if err != nil {
+		return nil, err
+	}
+	return ud, nil
+}
+
 func (r *userRepositoryImpl) CreateUser(ctx context.Context, userDomain *user.User) (*user.User, error) {
 	// UserIDをuuid.UUIDに変換
 	id, err := uuid.Parse(userDomain.ID().String())
